@@ -1,5 +1,6 @@
 2010-08-26:
 	* (seebs) make offsets.c slightly less useless
+	* (seebs) don't overwrite LD_LIBRARY_PATH values that include us
 
 2010-08-25:
 	* (seebs) fix the signal mask restore
